2012-03-13 Borut Razem <borut.razem AT gmail.com>

	* device/include/*, device/lib/*: corrected GPL license version
	  from 2.1 to 2: GPLv2.1 does not exist

2012-03-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-2001*.c,
	  support/regression/tests/gcc-torture-execute-2003*.c:
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-03-12 Borut Razem <borut.razem AT gmail.com>

	* doc/TININative.txt: removed, available at 
	  http://sourceforge.net/apps/trac/sdcc/wiki/Using%20SDCC%20to%20develop%20Native%20Java%20functions
	* doc/Makefile.in:
	  don't generate unusable html and txt versions of sdccman

2012-03-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  support/regression/tests/bug3501942.c:
	  Fixed bug #3501942.

2012-03-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug that made copying from hl to iy ineffcient on r2k,
	  fix another check in commitPair(), improved stack adjustment
	  after function call.

2012-03-11 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libio/usart/uopen.c:
	  properly setup BAUDCONbits.BRG16, closes #3495815

	* device/non-free/include/pic16/pic18f1220.h:
	  added BAUDCON alias and structure definition for BAUDCTL

2012-03-10 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx:
	  documented support for 18f1230/18f1330 device family

2012-03-10 Raphael Neider <rneider AT web.de>

	* Makefile.in:
	  device/lib build depends on sdcc-sdbinutils

	* device/include/pic16/adc.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/pic18fregs.h,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcsetch.c,
	  device/lib/pic16/libio/i2c.ignore,
	  device/lib/pic16/libio/usart/uopen.c,