@@ -48,8 +48,10 @@ void test (const char *x, int *y)
 void
 testTortureExecute (void)
 {
+#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && (__GNUC__ < 5))
   d->b = 0;
   d->a = &a;
   test ("", 0);
+#endif
 }
 
